--- a/Zhy.Components.Configuration/Zhy.Components.Configuration.csproj
+++ b/Zhy.Components.Configuration/Zhy.Components.Configuration.csproj
@@ -1,14 +1,53 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFrameworks>net6.0;</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+	<GenerateDocumentationFile>True</GenerateDocumentationFile>
+	<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+	<Nullable>enable</Nullable>
+	<Title>Zhy.Components.Configuration</Title>
+	<Authors>WineMonk</Authors>
+	<Description>Config配置文件组件，支持运行时读取、写入配置，动态监测配置文件无感刷新、加解密、运行时类型转换器...</Description>
+	<Copyright>©2024 By WineMonk</Copyright>
+	<PackageProjectUrl>https://github.com/WineMonk/Zhy.Components.Configuration.git</PackageProjectUrl>
+	<PackageReadmeFile>README.md</PackageReadmeFile>
+	<RepositoryUrl>https://github.com/WineMonk/Zhy.Components.Configuration.git</RepositoryUrl>
+	<PackageTags>CSharp;Configuration;</PackageTags>
+	<NeutralLanguage>zh-CN</NeutralLanguage>
+	<AssemblyVersion>1.0.0</AssemblyVersion>
+	<FileVersion>1.0.0</FileVersion>
+	<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+	<PackageLicenseFile>LICENSE</PackageLicenseFile>
+	<Version>1.0.0</Version>
+	<PackageIcon>logo_light@180.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
+    <None Include="..\..\Zhy.Components.Wpf\Zhy.Components.Wpf\Resources\Images\logo_light@180.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+    <PackageReference Include="System.Configuration.ConfigurationManager">
+      <Version>6.0.0</Version>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="System.Configuration.ConfigurationManager">
+      <Version>6.0.0</Version>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
