--- a/Zhy.Components.Configuration/Zhy.Components.Configuration.csproj
+++ b/Zhy.Components.Configuration/Zhy.Components.Configuration.csproj
@@ -1,11 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0;</TargetFrameworks>
-    <ImplicitUsings>enable</ImplicitUsings>
+	<TargetFrameworks>netcoreapp3.0;netcoreapp3.1;net461;net462;net47;net471;net472;net48;net481;net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
+    <ImplicitUsings>disable</ImplicitUsings>
 	<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-	<Nullable>enable</Nullable>
 	<Title>Zhy.Components.Configuration</Title>
 	<Authors>WineMonk</Authors>
 	<Description>Config配置文件组件，支持运行时读取、写入配置，动态监测配置文件无感刷新、加解密、运行时类型转换器...</Description>
@@ -15,12 +14,13 @@
 	<RepositoryUrl>https://github.com/WineMonk/Zhy.Components.Configuration.git</RepositoryUrl>
 	<PackageTags>CSharp;Configuration;</PackageTags>
 	<NeutralLanguage>zh-CN</NeutralLanguage>
-	<AssemblyVersion>1.0.0</AssemblyVersion>
-	<FileVersion>1.0.0</FileVersion>
+	<AssemblyVersion>2.0.0</AssemblyVersion>
+	<FileVersion>2.0.0</FileVersion>
 	<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 	<PackageLicenseFile>LICENSE</PackageLicenseFile>
-	<Version>1.0.0</Version>
+	<Version>2.0.0</Version>
 	<PackageIcon>logo_light@180.png</PackageIcon>
+	<PackageReleaseNotes>更新支持版本</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
@@ -38,16 +38,82 @@
     </None>
   </ItemGroup>
 
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
+    <PackageReference Include="System.Configuration.ConfigurationManager">
+	    <Version>4.6.0</Version>
+    </PackageReference>
+  </ItemGroup>
+	
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
+    <PackageReference Include="System.Configuration.ConfigurationManager">
+	    <Version>4.6.0</Version>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
+    <PackageReference Include="System.Configuration.ConfigurationManager">
+		<Version>4.6.0</Version>
+    </PackageReference>
+  </ItemGroup>
+	
   <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
     <PackageReference Include="System.Configuration.ConfigurationManager">
-      <Version>6.0.0</Version>
+		<Version>6.0.0</Version>
     </PackageReference>
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+  <ItemGroup Condition="'$(TargetFramework)' == 'net7.0'">
     <PackageReference Include="System.Configuration.ConfigurationManager">
-      <Version>6.0.0</Version>
+		<Version>6.0.0</Version>
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+    <PackageReference Include="System.Configuration.ConfigurationManager">
+		<Version>6.0.0</Version>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net461'">
+    <PackageReference Include="System.Configuration.ConfigurationManager">
+		<Version>4.6.0</Version>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net462'">
+    <PackageReference Include="System.Configuration.ConfigurationManager">
+		<Version>4.6.0</Version>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net47'">
+    <PackageReference Include="System.Configuration.ConfigurationManager">
+		<Version>4.6.0</Version>
+    </PackageReference>
+  </ItemGroup>
+	
+  <ItemGroup Condition="'$(TargetFramework)' == 'net471'">
+    <PackageReference Include="System.Configuration.ConfigurationManager">
+		<Version>4.6.0</Version>
+    </PackageReference>
+  </ItemGroup>
+	
+  <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
+    <PackageReference Include="System.Configuration.ConfigurationManager">
+		<Version>4.6.0</Version>
+    </PackageReference>
+  </ItemGroup>
+	
+  <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
+    <PackageReference Include="System.Configuration.ConfigurationManager">
+		<Version>4.6.0</Version>
+    </PackageReference>
+  </ItemGroup>
+	
+  <ItemGroup Condition="'$(TargetFramework)' == 'net481'">
+    <PackageReference Include="System.Configuration.ConfigurationManager">
+		<Version>4.6.0</Version>
+    </PackageReference>
+  </ItemGroup>
 </Project>
